<resources>
    <string name="app_name">NoHttpOzner</string>
    <string name="login_btn_skip">跳过</string>
    <string name="login_et_phone">请输入手机号</string>
    <string name="login_et_phone_code">请输入验证码</string>
    <string name="login_btn_getphone">获取验证码</string>
    <string name="login_btn_login">登录</string>
    <string name="login_p_tishi">我已阅读并同意《浩泽净水家免责条款》</string>
    <string name="login_no_code">未收到验证码？</string>
    <string name="login_btn_voi">获取语音验证码</string>
</resources>
