<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mdy.nohttpozner.LoginActivity">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="0">

        <TableRow
            android:layout_weight="1"
            android:gravity="right">

            <RelativeLayout>

                <TextView
                    android:id="@+id/login_btn_skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:padding="10dp"
                    android:text="@string/login_btn_skip"
                    android:textColor="@color/fz_blue"
                    android:textSize="17dp"

                    />
            </RelativeLayout>
        </TableRow>

        <!--Row 1-->
        <TableRow
            android:layout_weight="1"
            android:gravity="center">

            <RelativeLayout>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="50dp"
                    android:src="@drawable/ozner" />
            </RelativeLayout>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:gravity="center">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="48dp"
                    android:orientation="vertical"
                    android:paddingBottom="9.5dp"
                    android:paddingTop="9.5dp">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/login_phone" />

                        <EditText
                            android:id="@+id/login_et_phone"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:background="@drawable/border_none"
                            android:hint="@string/login_et_phone"
                            android:inputType="number"
                            android:paddingLeft="5dp"
                            android:textColor="@color/font_black"
                            android:textSize="14dp" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="9.5dp"
                        android:background="@color/theme_blue" />
                </LinearLayout>
            </LinearLayout>
        </TableRow>


        <TableRow android:gravity="center">

            <LinearLayout
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/login_password" />

                        <EditText
                            android:id="@+id/login_et_code"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border_none"
                            android:hint="@string/login_et_phone_code"
                            android:inputType="number"
                            android:paddingLeft="5dp"
                            android:paddingTop="9.5dp"
                            android:textColor="@color/font_black"
                            android:textSize="14dp" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="9.5dp"
                        android:background="@color/theme_blue"
                        android:clickable="true"
                        android:orientation="horizontal" />
                </LinearLayout>

                <TextView
                    android:id="@+id/login_btn_codeget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/selector_btn_voice"
                    android:clickable="true"
                    android:gravity="center"
                    android:maxWidth="140dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/login_btn_getphone"
                    android:textColor="@color/theme_blue"
                    android:textSize="14dp" />

            </LinearLayout>
        </TableRow>


        <TableRow>

            <TextView
                android:id="@+id/login_tv_wrong"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textColor="@color/fz_red" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/login_btn_login"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="48dp"
                    android:background="@drawable/selector_btn_login"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/login_btn_login"
                    android:textColor="@color/white"
                    android:textSize="17dp" />

            </LinearLayout>
        </TableRow>

        <TableRow android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"

                >

                <ImageView
                    android:id="@+id/login_cb_xieyi"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:clickable="true"
                    android:src="@drawable/selector_true_dafeult" />

                <TextView
                    android:id="@+id/login_btn_xieyi"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dp"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/login_p_tishi"
                    android:textSize="12dp" />
            </LinearLayout>

        </TableRow>


        <TableRow
            android:layout_weight="2"
            android:gravity="center">

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="48dp"

                    >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="9.5dp"
                        android:background="@color/gray"></LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:background="@color/white"
                        android:paddingLeft="13dp"
                        android:paddingRight="13dp"
                        android:text="@string/login_no_code"
                        android:textSize="12dp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/login_btn_voice"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="48dp"
                    android:layout_marginTop="19dp"
                    android:background="@drawable/selector_btn_voice"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/login_btn_voi"
                    android:textSize="17dp" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</RelativeLayout>
